# NIA_KOTSA_Traffic_Safety

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: infer.py  train.py
src/traffic_safety/: __init__.py  cli.py  config.py  io.py  models.py  pipeline.py
src/traffic_safety/features/: __init__.py  assessment_a.py  assessment_b.py  history.py  interactions.py  primitives.py
